style : added margin and padding

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,15 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+input {
+  width: 60%;
+}
+
+div {
+  margin: 1rem;
+}
+
+span {
+  padding: 1rem;
+}
